fixed image overflow

--- a/styles/section-about/_main.scss
+++ b/styles/section-about/_main.scss
@@ -19,7 +19,6 @@
     &__image {
       display: table;
       margin: auto;
-      overflow: hidden;
 
       img {
         max-width: 100%;
